- Addet component 'Rotate' prevents landscape orientation on mobile devices.

--- a/src/scss/components/section/_sections.scss
+++ b/src/scss/components/section/_sections.scss
@@ -97,8 +97,6 @@
 
 @media (max-width:$mediumWidth) and (orientation: landscape) {
     .rotate {    
-        background: #212121 url('/../../assets/img/rotate.jpg') no-repeat center;
-        background-size: 100% auto;
         position: fixed;
         top: 0;
         left: 0;
